--- a/CalculationOfFigureApp/Base.lproj/Main.storyboard
+++ b/CalculationOfFigureApp/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,6 +22,9 @@
                                     <segment title="FLAT FIGURE"/>
                                     <segment title="VOLUME FIGURE"/>
                                 </segments>
+                                <connections>
+                                    <segue destination="0F7-Os-eaZ" kind="presentation" modalPresentationStyle="fullScreen" id="naW-0K-GTs"/>
+                                </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose the figure`s type" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W8a-MT-1A0">
                                 <rect key="frame" x="16" y="146" width="288" height="72"/>
@@ -161,6 +165,21 @@
             </objects>
             <point key="canvasLocation" x="2991" y="75"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="SCN-rv-gzF">
+            <objects>
+                <viewController id="0F7-Os-eaZ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nEX-aB-vQF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="M9S-cX-zHS"/>
+                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cUO-Nf-9mh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="821" y="-250"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="rv9-yO-CVY">
             <objects>
@@ -178,7 +197,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kwn-nm-gZw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="757.5" y="75"/>
+            <point key="canvasLocation" x="819" y="479"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sao-4J-xLt">
@@ -199,4 +218,9 @@
             <point key="canvasLocation" x="2240.625" y="75"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
