--- a/CalculationOfFigureApp/Base.lproj/Main.storyboard
+++ b/CalculationOfFigureApp/Base.lproj/Main.storyboard
@@ -290,7 +290,7 @@
                                 <rect key="frame" x="110" y="369" width="100" height="36"/>
                                 <color key="backgroundColor" red="0.60000002379999995" green="0.70588237050000002" blue="0.47843140360000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="eqR-Qo-wFt"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="eqR-Qo-wFt"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Calculate">
